--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,6 +7,11 @@
     text-align: center;
 }
 
+.pending-bet .well {
+    border: 1px solid;
+    text-align: center;
+}
+
 .executed-bet .well {
     border: 1px solid;
     text-align: center;
