--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -21,6 +21,14 @@
     background-color: #375a7f;
 }
 
+.account-menu {
+    background-color: #375a7f;
+}
+
+.gas-price-menu {
+    background-color: #375a7f;
+}
+
 .ReactModal__Overlay {
     -webkit-perspective: 600;
     perspective: 600;
